--- a/springboot2024/src/main/resources/templates/details.html
+++ b/springboot2024/src/main/resources/templates/details.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Details</title>
+    <title th:text="${title}"></title>
 </head>
 <body>
-    <h1>Hello spring 2024</h1>
+    <h1 th:text="${title}"></h1>
+    <h2 th:text="${name}"></h2>
 </body>
 </html>
