--- a/springboot2024/src/main/resources/templates/details.html
+++ b/springboot2024/src/main/resources/templates/details.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1 th:text="${title}"></h1>
-    <h2 th:text="${name}"></h2>
+    <h2 th:text="${user.name}"></h2>
+    <h2 th:text="${user.lastname}"></h2>
 </body>
 </html>
